--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ test1/test1/test1.vcxproj.user
 test1/test1/Debug/test1_manifest.rc
 *.res
 test1/test1/ReadMe.txt
+*.user
+test2/test2/test2/ReadMe.txt
+*.rc
